<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-10dp"
    android:background="#d1d8e0"
    android:paddingTop="8dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserPost"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_progressbar"
            android:contentDescription="@string/avatar" />

        <TextView
            android:id="@+id/txtNamePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDatePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="32dp"
            android:text="@string/post_date" />

        <ImageView
            android:id="@+id/imagePost"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="70dp"
            android:background="#c8d6e5"
            android:contentDescription="@string/image_post"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txtDescPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="308dp"
            android:padding="10dp"
            android:text="@string/descrption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="350dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextLikeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/_0like" />

            <TextView
                android:id="@+id/TextComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:text="@string/_0comment" />

            <TextView
                android:id="@+id/TextShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:text="@string/_0share" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="380dp"
            android:background="#dfe4ea" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="376dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/likeBtn"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp"
                android:background="@color/colorWhite"
                android:contentDescription="@string/imglike"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@mipmap/action_like_icon_gray"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TextLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/like"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/comment_Btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="18dp"
                android:background="@color/colorWhite"
                android:contentDescription="@string/imglike"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@mipmap/iconcomments"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Text_Comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/comment"
                android:textStyle="bold" />


            <ImageButton
                android:id="@+id/shareBtn"
                android:layout_width="40dp"
                android:layout_height="28dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorWhite"
                android:contentDescription="@string/imglike"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@mipmap/icon_shares"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/Text_Share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/share"
                android:textStyle="bold" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>