<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/parent"
    tools:context="com.drmas.issam.sharefood.RegisterActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/Share_Food"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/registerTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/Enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHighlight="@color/colorBlack"
        android:textColorHint="@color/colorGray" />

    <EditText
        android:id="@+id/registerTxtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:textColorHighlight="@color/colorBlack"
        android:textColorHint="@color/colorGray"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/registerConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:textColorHighlight="@color/colorBlack"
        android:textColorHint="@color/colorGray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_an_account"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reg_login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="LoginColickedActivitty"
            android:text="@string/login_to_account"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/reg_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="-420dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>
